# silvia-dolist

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  test_edge_cases.py  test_handlers.py
docs/superpowers/plans/: 2026-05-07-cli-todo-app-phase-1.md
docs/superpowers/specs/: 2026-05-07-cli-todo-app-design.md
scripts/: smoke.py
src/todo_cli/: __init__.py  __main__.py  ask.py  commands.py  config.py  errors.py  mcp_server.py  models.py  parse_text.py  render.py  repl.py  sky.py  storage.py  suggest.py  symbols.py  tui.py
tests/: conftest.py  test_ask.py  test_commands.py  test_completer.py  test_config.py  test_errors.py  test_main.py  test_mcp_server.py  test_models.py  test_msys_unmangle.py  test_parse_text.py  test_purge.py  test_render.py  test_render_due.py  test_repl.py  test_sky.py  test_storage.py  test_suggest.py  test_tui_autofill.py
